# cosmic

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  pytest-comment.yml  release.yml
cosmic/: main.py
cosmic/adapter/entities/: machine_template.py
cosmic/adapter/templates/: pytransitions_machine.mako  pytransitions_model.mako
cosmic/adapter/xml/: adapter.py  model_factory.py  uppaal_adapter.py
cosmic/generator/: code_generator.py
cosmic/utils/: string_oper.py
docs/: uppal_cosmic.md
tests/: conftest.py
tests/adapter/: conftest.py  test_model_factory.py  test_uppaal_adapter.py
tests/generator/: test_code_generator.py
tests/mock_files/: branchpoint_machine.xml  hcl_teste.xml
tests/utils/: test_string_oper.py
