[tool.poetry]
name = "cosmic"
version = "0.1.0"
description = "Code Output for State Machine Interactive Creation"
authors = ["Bruno Pinheiro <bopj@softex.cin.ufpe.br>", "João Ribeiro <jrsl2@softex.cin.ufpe.br>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE v3.0"
readme = "README.md"
packages = [
    { include = "cosmic" },
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.9.4"
mako = "^1.3.8"
typer = "^0.15.1"
num2words = "^0.5.14"

[tool.poetry.scripts]
cosmic = "cosmic.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "4.0.1"
taskipy = "^1.14.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[tool.taskipy.tasks]
test = 'pytest --cov=cosmic tests/ -vv'
post_test = 'coverage html'



[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv --cov=cosmic --cov-report=term-missing --cov-report=html --cov-config=.coveragerc"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "cosmic/adapter/templates/*.mako",
]
