[project]
name = "cosmic"
version = "0.1.0"
description = "Code Output for State Machine Interactive Creation"
authors = [
    { name = "Bruno Pinheiro", email = "bopj@softex.cin.ufpe.br" },
    { name = "João Ribeiro", email = "jrsl2@softex.cin.ufpe.br" },
]
license = { file = "LICENSE" }
readme = "README.md"
packages = [
    { include = "cosmic" },
]
requires-python = "==3.10.*"
dependencies = [
    "rich>=13.9.4",
    "mako>=1.3.8",
    "typer>=0.15.1",
    "num2words>=0.5.14"
]

[tool.poetry.scripts]
cosmic = "cosmic.__main__:app"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "4.0.1"
taskipy = "^1.14.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
briefcase = "^0.3.22"

[tool.taskipy.tasks]
test = 'pytest --cov=cosmic tests/ -vv'
post_test = 'coverage html'

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv --cov=cosmic --cov-report=term-missing --cov-report=html --cov-config=.coveragerc"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "cosmic/adapter/templates/*.mako",
]

[tool.briefcase]
project_name = "COSMIC"
bundle = "com.rria"

[tool.briefcase.app.cosmic]
description = "Code Output for State Machine Interactive Creation"
long_description = "COSMIC is a tool for generating code output for state machine interactive creation."
sources = ["cosmic"]
test_sources = ["tests"]
